docs: make swagger
